tests/fixtures/invalid/duplicate-key-std-into-dotted.stderr
TOML parse error at line 6, column 1
  |
6 | size = "small"
  | ^
Duplicate key `size`

